--- a/mlir/examples/standalone/include/Standalone/CMakeLists.txt
+++ b/mlir/examples/standalone/include/Standalone/CMakeLists.txt
@@ -7,3 +7,7 @@ set(LLVM_TARGET_DEFINITIONS ShapeInferenceInterface.td)
 mlir_tablegen(ShapeInferenceOpInterfaces.h.inc -gen-op-interface-decls)
 mlir_tablegen(ShapeInferenceOpInterfaces.cpp.inc -gen-op-interface-defs)
 add_public_tablegen_target(StandaloneShapeInferenceInterfaceIncGen)
+
+set(LLVM_TARGET_DEFINITIONS StandaloneCombine.td)
+mlir_tablegen(StandaloneCombine.inc -gen-rewriters)
+add_public_tablegen_target(StandaloneCombineIncGen)
