--- a/mlir/examples/standalone/lib/Standalone/CMakeLists.txt
+++ b/mlir/examples/standalone/lib/Standalone/CMakeLists.txt
@@ -8,7 +8,8 @@ add_mlir_dialect_library(MLIRStandalone
 
         DEPENDS
         MLIRStandaloneOpsIncGen
-		StandaloneShapeInferenceInterfaceIncGen
+	StandaloneShapeInferenceInterfaceIncGen
+	StandaloneCombineIncGen
 
 	LINK_LIBS PUBLIC
 	MLIRIR
