Add lower to LLVM pass.

--- a/mlir/examples/standalone/lib/Standalone/CMakeLists.txt
+++ b/mlir/examples/standalone/lib/Standalone/CMakeLists.txt
@@ -3,6 +3,7 @@ add_mlir_dialect_library(MLIRStandalone
         StandaloneOps.cpp
 		ShapeInferencePass.cpp
 		LowerToAffineLoops.cpp
+		LowerToLLVM.cpp
 
         ADDITIONAL_HEADER_DIRS
         ${PROJECT_SOURCE_DIR}/include/Standalone
