Add execution engine.

--- a/mlir/examples/standalone/standalone-pipeline/CMakeLists.txt
+++ b/mlir/examples/standalone/standalone-pipeline/CMakeLists.txt
@@ -25,5 +25,7 @@ target_link_libraries(standalone-pipeline
         MLIRParser
         MLIRSideEffectInterfaces
         MLIRTransforms
+        MLIRTargetLLVMIRExport
+        MLIRExecutionEngine
         MLIRStandalone
         )
