--- a/mlir/examples/standalone/include/Standalone/CMakeLists.txt
+++ b/mlir/examples/standalone/include/Standalone/CMakeLists.txt
@@ -1,3 +1,9 @@
 add_mlir_dialect(StandaloneOps standalone)
 add_mlir_doc(StandaloneDialect -gen-dialect-doc StandaloneDialect Standalone/)
 add_mlir_doc(StandaloneOps -gen-op-doc StandaloneOps Standalone/)
+
+# Most dialects should use add_mlir_interfaces().
+set(LLVM_TARGET_DEFINITIONS ShapeInferenceInterface.td)
+mlir_tablegen(ShapeInferenceOpInterfaces.h.inc -gen-op-interface-decls)
+mlir_tablegen(ShapeInferenceOpInterfaces.cpp.inc -gen-op-interface-defs)
+add_public_tablegen_target(StandaloneShapeInferenceInterfaceIncGen)
