--- a/mlir/examples/standalone/lib/Standalone/CMakeLists.txt
+++ b/mlir/examples/standalone/lib/Standalone/CMakeLists.txt
@@ -2,6 +2,7 @@ add_mlir_dialect_library(MLIRStandalone
         StandaloneDialect.cpp
         StandaloneOps.cpp
         ShapeInferencePass.cpp
+        LowerToAffineLoops.cpp
 
         ADDITIONAL_HEADER_DIRS
         ${PROJECT_SOURCE_DIR}/include/Standalone
