Add execution engine.

--- a/mlir/examples/standalone/standalone-pipeline/CMakeLists.txt
+++ b/mlir/examples/standalone/standalone-pipeline/CMakeLists.txt
@@ -18,4 +18,6 @@ target_link_libraries(standalone-pipeline
         MLIRParser
         MLIRSideEffectInterfaces
         MLIRTransforms
+        MLIRTargetLLVMIR
+        MLIRExecutionEngine
         MLIRStandalone)
